overlays/prod/apps/sabnzbd/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sabzbd-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: sabzbd-http-port
      protocol: HTTP
    hosts:
      - sabzbd.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: sabzbd-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: sabzbd.simplefxn.com
    hosts:
      - sabzbd.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sabzbd-vs
  namespace: istio-system
spec:
  hosts:
  - "sabzbd.simplefxn.com"
  gateways:
  - sabzbd-gateway
  http:
  - route:
    - destination:
        host: sabzbd.apps.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sabzbd
  namespace: istio-system
spec:
  host: sabzbd.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
